[tool.poetry]
name = "gitpod-python-playground"
version = "0.1.0"
description = "Playground to mess with gitpod"
authors = ["Daniel <gleek.dan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"
pyleniumio = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
